--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="data">
-            <img src="apple-touch-icon.png" alt="Photo du Profil" class="masked-element">
+            <img src="img-cv.png" alt="Photo du Profil" class="masked-element">
             <h1>Donnees personnelles</h1>
             <hr>
                 <h2>Nom/Prenom</h2>
