--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <p>0773331090</p>
                 <h2>Adresse e-mail</h2>
                     <p>jhr13_29@hotmail.com</p>
-                <h2>Data de Naissance</h2>
-                    <p>29-09-1995</p>
+                    <h2>GitHub</h2>
+                    <a href="https://github.com/Hexomax" target="_blank" rel="external">Repository GitHub</a>
                 <h2>Sexe</h2>
                     <p>Homme</p>
                 <h2>Nationalite</h2>
