--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -9,10 +9,19 @@
 <body>
     <header>
         <section class="container">
-            <div class="return">Volte Aqui</div>
-            <div class="title-blog">A Caminho do Fort</div>
+            <div class="return"><a href="">Voltar</a></div>
              <div class="menu">Menu</div>
         </section>
+        <div class="title-blog"> A Caminho do Fort</div>
     </header>
+
+    <nav>
+        <div class="link-article">
+            <a href="first-story.html">Primeiro assunto do blog quer descobrir como eu fui para na legiao clique aqui!!</a>
+        </div>
+    </nav>
+    <footer>
+       <div class="contact">Nosso contato</div>
+    </footer>
 </body>
 </html>
