add link to download

--- a/ex-blog/first-story.html
+++ b/ex-blog/first-story.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Como eu descobri a Legiao</h1>
     <a href="index.html">Para retornar para a pagina inicial</a>
+
+    <h1>Arquivos para Download</h1>
+        <ul>
+            <li><a href="pdf-download/guia-markdown.pdf" download="guia-markdown.pdf" type="application/pdf" target="_blank">Baixar Guia Markdown</a></li>
+        </ul>
 </body>
 </html>
