--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -9,17 +9,20 @@
 <body>
     <header>
         <section class="container">
-            <div class="return"><a href="">Voltar</a></div>
+            <div class="logo"><img src="logo.png" alt="Logo do Blog"></div>
              <div class="menu">Menu</div>
         </section>
-        <div class="title-blog"> A Caminho do Fort</div>
+        <div class="title-blog"></div>
     </header>
 
-    <nav>
-        <div class="link-article">
-            <a href="first-story.html">Primeiro assunto do blog quer descobrir como eu fui para na legiao clique aqui!!</a>
-        </div>
-    </nav>
+    <main>
+        <nav>
+            <div class="link-article">
+                <a href="first-story.html">Primeiro assunto do blog quer descobrir como eu fui para na legiao clique aqui!!</a>
+            </div>
+        </nav>
+    </main>
+
     <footer>
        <div class="contact">Nosso contato</div>
     </footer>
