add config css header

--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <section class="container">
-            <div class="logo"><img src="logo.png" alt="Logo do Blog"></div>
+            <div class="logo"><img class="img-logo" src="logo.png" alt="Logo do Blog"></div>
              <div class="menu">Menu</div>
         </section>
         <div class="title-blog"></div>
