config bloc article

--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -16,14 +16,14 @@
     </header>
 
     <main>
-        <nav>
+        <nav class="article">
             <div class="link-article">
                 <a href="first-story.html">Primeiro assunto do blog quer descobrir como eu fui para na legiao clique aqui!!</a>
             </div>
         </nav>
     </main>
 
-    <footer>
+    <footer class="feet">
        <div class="contact">Nosso contato</div>
     </footer>
 </body>
