set image and title

--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -9,10 +9,14 @@
 <body>
     <header>
         <section class="container">
-            <div class="logo"><img class="img-logo" src="logo.png" alt="Logo do Blog"></div>
-             <div class="menu">Menu</div>
+            <div class="logo">
+                <img class="img-logo" src="logo.png" alt="Logo do Blog">
+            </div>
+             <div class="menu">
+                <p>Saiba Mais sobre o autor</p>
+            </div>
         </section>
-        <div class="title-blog"></div>
+        <div class="title-blog"><h1 class="title">Blog Sobre a Legiao Estrangeira</h1></div>
     </header>
 
     <main>
