change the article link

--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -22,7 +22,7 @@
     <main>
         <nav class="article">
             <div class="link-article">
-                <a href="first-story.html">Primeiro assunto do blog quer descobrir como eu fui para na legiao clique aqui!!</a>
+                <a href="first-story.html">Leia o nosso primeiro artigo onde eu conto como eu fui parar na Legiao talvez isso possa te inspirar. Clique aqui!!</a>
             </div>
         </nav>
     </main>
