--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -13,7 +13,9 @@
                 <img class="img-logo" src="logo.png" alt="Logo do Blog">
             </div>
              <div class="menu">
-                <p>Saiba Mais sobre o autor</p>
+                <a class="about" href="about-us.html">
+                    <p>Saiba Mais sobre o autor</p>
+                </a>
             </div>
         </section>
         <div class="title-blog"><h1 class="title">Blog Sobre a Legiao Estrangeira</h1></div>
@@ -22,7 +24,7 @@
     <main>
         <nav class="article">
             <div class="link-article">
-                <a href="first-story.html">Leia o nosso primeiro artigo onde eu conto como eu fui parar na Legiao talvez isso possa te inspirar. Clique aqui!!</a>
+                <a class="article01" href="first-story.html">Leia o nosso primeiro artigo onde eu conto como eu fui parar na Legiao talvez isso possa te inspirar. Clique aqui!!</a>
             </div>
         </nav>
     </main>
