add new page about us

--- a/ex-blog/about-us.html
+++ b/ex-blog/about-us.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog A Caminho do Fort</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="container">
+            <div class="logo">
+                <img class="img-logo" src="logo.png" alt="Logo do Blog">
+            </div>
+             <div class="menu">
+                <a class="about" href="index.html">
+                    <p>Volte para Pagina Inicial</p>
+                </a>
+            </div>
+        </section>
+    </header>
+    <h1 class="title-about">Quem sou eu ?</h1>
+        <img class="img-profil" src="img-cv.png" alt="Profil Image">
+        <p class="intro-about">Salut les Freres!! Para começar bem, um pouco de francês para se acostumar. Bom, meu nome é Henrique, tenho 28 anos e em 2018 tomei a decisão de me voluntariar no serviço militar na Legião Estrangeira. Depois de terminar meu primeiro contrato de 5 anos, decidi sair da instituição e ter uma vida civil. Estou aqui para compartilhar minha história e experiência, ajudando os camaradas que buscam mais informações para se preparar e bater à porta da Legião. A Legião Estrangeira pode ser uma excelente oportunidade para melhorar de vida, aprender novos idiomas, conhecer pessoas e viver em um país com mais possibilidades de crescimento, mas isso não significa que será fácil. No entanto, provavelmente valerá a pena. Desejo boa sorte a todos.</p>
+
+        <h2 class="contact-about">Como falar comigo?</h2>
+        <ul class="list">
+            <li><img src="pdf-download/icone-facebook.png" alt="Icone Facebook"> <a class="list" type="email" href="jhr13_29@hotmail.com" target="_blank" rel="external">Me escreve um email se tiver duvidas!</a></li>
+            <li><img src="pdf-download/icone-github.png" alt="GitHub"> <a class="list" href="https://github.com/Hexomax" target="_blank" rel="external">Me GitHub para ver meu repositorio</a></li>
+            <li><img src="pdf-download/icone-linkedin.png" alt="LinkedIn"> <a class="list" href="https://www.linkedin.com/in/henrique-ramos-b33076281" target="_blank" rel="external">Me adiciona no LinkedIn</a></li>
+
+        </ul>
 </body>
 </html>
