change images and color design

--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -18,7 +18,9 @@
                 </a>
             </div>
         </section>
-        <div class="title-blog"><h1 class="title">Blog Sobre a Legiao Estrangeira</h1></div>
+        <div class="title-blog">
+            <h1 class="title">Blog Sobre a Legiao Estrangeira</h1>
+        </div>
     </header>
 
     <main>
