--- a/ex-blog/about-us.html
+++ b/ex-blog/about-us.html
@@ -10,7 +10,7 @@
     <header>
         <section class="container">
             <div class="logo">
-                <img class="img-logo" src="logo.png" alt="Logo do Blog">
+                <img class="img-logo" src="logo-c1.png" alt="Logo do Blog">
             </div>
              <div class="menu">
                 <a class="about" href="index.html">
