add nav and set the opacity

--- a/ex-blog/about-us.html
+++ b/ex-blog/about-us.html
@@ -12,11 +12,11 @@
             <div class="logo">
                 <img class="img-logo" src="logo-c1.png" alt="Logo do Blog">
             </div>
-             <div class="menu">
+             <nav class="menu">
                 <a class="about" href="index.html">
                     <p>Volte para Pagina Inicial</p>
                 </a>
-            </div>
+            </nav>
         </section>
     </header>
     <h1 class="title-about">Quem sou eu ?</h1>
