--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -12,11 +12,11 @@
             <div class="logo">
                 <img class="img-logo" src="logo-c1.png" alt="Logo do Blog">
             </div>
-             <div class="menu">
+             <nav class="menu">
                 <a class="about" href="about-us.html">
                     <p>Saiba Mais sobre o autor</p>
                 </a>
-            </div>
+            </nav>
         </section>
         <div class="title-blog">
             <h1 class="title">Blog Sobre a Legiao Estrangeira</h1>
