--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -14,7 +14,7 @@
             </div>
              <nav class="menu">
                 <a class="about" href="about-us.html">
-                    <p>Saiba Mais sobre o autor</p>
+                    <p class="text-about">Saiba Mais sobre o autor</p>
                 </a>
             </nav>
         </section>
