change positions absolute and relative

--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -19,6 +19,7 @@
             </nav>
         </section>
         <div class="title-blog">
+            <img class="bk-image" src="image-background-blog/pex-1000.jpg" alt="Image Background Blog">
             <h1 class="title">Blog Sobre a Legiao Estrangeira</h1>
         </div>
     </header>
