--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="flux">
         <section class="container">
             <div class="logo">
                 <img class="img-logo" src="logo-c1.png" alt="Logo do Blog">
@@ -25,14 +25,14 @@
     </header>
 
     <main>
-        <nav class="article">
+        <nav class="article flux">
             <div class="link-article">
                 <a class="article01" href="first-story.html">Leia o nosso primeiro artigo onde eu conto como eu fui parar na Legiao talvez isso possa te inspirar. Clique aqui!!</a>
             </div>
         </nav>
     </main>
 
-    <footer class="feet">
+    <footer class="feet flux">
        <div class="contact">Nosso contato</div>
     </footer>
 </body>
