--- a/ex-blog/index.html
+++ b/ex-blog/index.html
@@ -20,14 +20,14 @@
         </section>
         <div class="title-blog">
             <img class="bk-image" src="image-background-blog/pex-1000.jpg" alt="Image Background Blog">
-            <h1 class="title">Blog Sobre a Legiao Estrangeira</h1>
+            <h1> Blog sobre a Legiao Estrangeira </h1>
         </div>
     </header>
 
     <main>
         <nav class="article flux">
             <div class="link-article">
-                <a class="article01" href="first-story.html">Leia o nosso primeiro artigo onde eu conto como eu fui parar na Legiao talvez isso possa te inspirar. Clique aqui!!</a>
+                <a class="article0" href="first-story.html">Leia o nosso primeiro artigo onde eu conto como eu fui parar na Legiao talvez isso possa te inspirar. Clique aqui!!</a>
             </div>
         </nav>
     </main>
